feat [BCM 1295]: Allow changing watchers name and filtering by name (#16)
